--- a/themes/hexo-theme-Claudia/layout/index.pug
+++ b/themes/hexo-theme-Claudia/layout/index.pug
@@ -3,6 +3,8 @@ extends widget/base
 block append head
     link(rel='stylesheet', href= url_for("/style/widget-post-list.css"))
     script(src= url_for("/js/snow.js"))
+    script(src= url_for("/js/calendar.js"))
+    script(src= url_for("/js/languages.js"))
 block content
     include widget/widget-post-list
         block sidebar
