--- a/themes/hexo-theme-Claudia/layout/widget/base.pug
+++ b/themes/hexo-theme-Claudia/layout/widget/base.pug
@@ -14,6 +14,8 @@ html(lang=config.language class= `appearance-${ appearance }`)
     title= pageTitle
     meta(name="description" content= config.description || theme.user && theme.user.description)
     meta(name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, initial-scale=1")
+    <!-- 解决403图片防盗链的问题 -->    
+    meta(content="no-referrer" name="referrer")
 
     <!-- Google Analytics -->
     if(theme.ga_track_id)
